@@ -1,3 +1,7 @@
+2012-03-29  Romain Francois  <romain@r-enthusiasts.com>
+
+    * inst/include/Rcpp/vector/Vector.h: Vector<> gains the has_element_called method
+
 2012-03-24  Romain Francois  <romain@r-enthusiasts.com>
 
 	* src/cache.cpp: Using a single Rcpp_cache, stored in the Rcpp
